--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,16 @@
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-inner-image-zoom": "^3.0.2",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
